# variant-review-workbench

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: demo.vcf
data/references/: external_sources.md
outputs/demo_run/: annotated_variants.csv  prioritized_variants.json  report.html  run_metadata.json  summary.json
outputs/demo_run_pgx/: report.html  run_metadata.json
scripts/: fetch_clinvar_snapshot.py
src/: annotator.py  app_service.py  cache_bootstrap.py  cli.py  clinvar_index.py  models.py  pgx_enrichment.py  ranker.py  report_builder.py  vcf_parser.py
src/web/: __init__.py  app.py  jobs.py  settings.py  storage.py
src/web/static/: site.css
templates/: report.html.j2
templates/web/: about.html.j2  base.html.j2  docs.html.j2  home.html.j2  results.html.j2
tests/: test_annotator.py  test_cache_bootstrap.py  test_cli.py  test_foundation_pipeline.py  test_models_and_helpers.py  test_pgx_enrichment.py  test_ranker.py  test_report_builder.py  test_web_app.py  test_web_jobs.py
